fix running generate sources